tests/chapter_17/invalid_types/incomplete_types/void_array_in_cast.c
int main(void) {
    (void(*)[3]) 4; // array of void is illegal
    return 0;
}